--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 fastapi==0.104.1
+fastapi-utils==0.2.1
 pydantic==2.5.1
 
 uvicorn==0.22.0
 mysql-connector-python==8.0.33
 SQLAlchemy==2.0.23
+
+pytest==7.2.2
+httpx==0.23.3
