--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ venv/
 *.db
 *.idea
 *.pyc
+app/__pycache__/*
+app/__pycache__/database.cpython-312.pyc
+app/__pycache__/models.cpython-312.pyc
+app/__pycache__/pedidos.cpython-312.pyc
+app/__pycache__/schemas.cpython-312.pyc
