--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.12.1
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
       - name: Install tox and any other packages
         run: pip install tox
       - name: Run tox
