adicionado versão python sonar alteração pipe para executar a cada push na main

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=snackhub-kitchen
 sonar.organization=grupo60-fiap2023
+sonar.python.version=3.12.1
 
 sonar.python.coverage.reportPaths=coverage.xml
