--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,12 @@ skipsdist = True
 [testenv]
 deps =
     pytest
-    -r requirements.txt
-    pytest-cov
-commands = pytest --cov=my_project --cov-report=xml --cov-config=tox.ini --cov-branch
+    coverage
+commands =    
+    coverage run -m pytest tests/unit -v -s
+    coverage xml
+ 
+[coverage:run]
+relative_files = True
+source = my_project/
+branch = True
