--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,5 @@ skipsdist = True
 [testenv]
 deps =
     pytest
-    coverage
-commands =    
-    coverage run -m pytest tests/unit -v -s
-    coverage xml
- 
-[coverage:run]
-relative_files = True
-source = my_project/
-branch = True
+    pytest-cov
+commands = pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch
