--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,4 @@ skipsdist = True
 deps =
     pytest
     pytest-cov
-commands = pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov=app --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
