--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ deps =
     pytest
     -r requirements.txt
     pytest-cov
-commands = pytest --cov=app --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov=app --cov-report=xml:coverage.xml --cov-config=tox.ini
