ignorando arquivo __init__ no relatorio

--- a/tox.ini
+++ b/tox.ini
@@ -8,3 +8,7 @@ deps =
     -r requirements.txt
     pytest-cov
 commands = pytest --cov=app --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
+
+[coverage:run]
+omit =
+    app/__init__.py
