--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.host.url=https://sonarcloud.io
 sonar.projectKey=grupo60-fiap2023_snackhub-kitchen
 sonar.organization=grupo60-fiap2023
 sonar.python.version=3.12.1
