--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,6 @@ sonar.host.url=https://sonarcloud.io
 sonar.projectKey=grupo60-fiap2023_snackhub-kitchen
 sonar.organization=grupo60-fiap2023
 sonar.python.version=3.12.1
+sonar.sources=app/
 
 sonar.python.coverage.reportPaths=coverage.xml
