--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     pytest
     -r requirements.txt
     pytest-cov
-commands = pytest --cov=app --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov=./ --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
 
 [coverage:run]
 omit =
