--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,22 @@ jobs:
         with:
           args: >
             -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+            - name: Configure AWS credentials 🔑
+            uses: aws-actions/configure-aws-credentials@v1
+            with:
+              aws-region: us-east-1
+              aws-access-key-id: ${{ secrets.TF_VAR_AWS_ACCESS_KEY }}
+              aws-secret-access-key: ${{ secrets.TF_VAR_AWS_SECRET_KEY }}    
+      - name: Login to Amazon ECR Private
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build, tag, and push docker image to Amazon ECR
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ecr_repository
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) ${{ env.REGISTRY }}
+          docker build -t ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:kitchen_${{ env.IMAGE_TAG }} -t ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:kitchen_latest . -f Dockerfile
+          docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:kitchen_${{ env.IMAGE_TAG }}
+          docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:kitchen_latest
