--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,10 @@ envlist = py39
 skipsdist = True
  
 [testenv]
+region = REGION
+
+setenv =
+    REGION = us-east-1
 deps =
     pytest
     -r requirements.txt
