atualizando tox pra obter variaveis da aws

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ region = REGION
 
 setenv =
     REGION = us-east-1
+    AWS_ACCESS_KEY_ID = {env.AWS-ACCESS}
+    AWS_SECRET_ACCESS_KEY = {env.AWS-SECRET}
 deps =
     pytest
     -r requirements.txt
