--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ jobs:
         run: pip install -r requirements.txt
       - name: Install tox and any other packages
         run: pip install tox
+      - name: Exportar variavel aws
+        run: |
+          export AWS-ACCESS=${{secrets.TF_VAR_AWS_ACCESS_KEY}}
+          export AWS-SECRET=${{secrets.TF_VAR_AWS_SECRET_KEY}}
       - name: Run tox
         run: tox -e py
       - name: SonarCloud Scan
