--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,21 +18,21 @@ jobs:
           python-version: 3.12.1
       - name: Install Dependencies
         run: pip install -r requirements.txt
-      - name: Install tox and any other packages
-        run: pip install tox
-      - name: Exportar variavel aws
-        run: |
-          echo "AWS-ACCESS=${{ secrets.TF_VAR_AWS_ACCESS_KEY }}" >> $GITHUB_ENV
-          echo "AWS-SECRET=${{ secrets.TF_VAR_AWS_SECRET_KEY }}" >> $GITHUB_ENV
-      - name: Run tox
-        run: tox -e py
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+      # - name: Install tox and any other packages
+      #   run: pip install tox
+      # - name: Exportar variavel aws
+      #   run: |
+      #     echo "AWS-ACCESS=${{ secrets.TF_VAR_AWS_ACCESS_KEY }}" >> $GITHUB_ENV
+      #     echo "AWS-SECRET=${{ secrets.TF_VAR_AWS_SECRET_KEY }}" >> $GITHUB_ENV
+      # - name: Run tox
+      #   run: tox -e py
+      # - name: SonarCloud Scan
+      #   uses: SonarSource/sonarcloud-github-action@master
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   with:
+      #     args: >
+      #       -Dsonar.token=${{ secrets.SONAR_TOKEN }}
       - name: Configure AWS credentials 🔑
         uses: aws-actions/configure-aws-credentials@v1
         with:
